test_suite/tests/ui/missing_supertrait.stderr
error[E0277]: `SyntaxKind` doesn't implement `Debug`
 --> tests/ui/missing_supertrait.rs:5:10
  |
5 | pub enum SyntaxKind {
  |          ^^^^^^^^^^ `SyntaxKind` cannot be formatted using `{:?}`
  |
  = help: the trait `Debug` is not implemented for `SyntaxKind`
  = note: add `#[derive(Debug)]` to `SyntaxKind` or manually `impl Debug for SyntaxKind`
note: required by a bound in `Syntax`
 --> $WORKSPACE/cstree/src/lib.rs
  |
  | pub trait Syntax: Sized + Copy + fmt::Debug + Eq {
  |                                  ^^^^^^^^^^ required by this bound in `Syntax`
help: consider annotating `SyntaxKind` with `#[derive(Debug)]`
    |
5   | #[derive(Debug)]
    |
